BlogList is now removed from DOM when detail is called and scroll position is maintained

--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
 
 <div class="container blog-content">
 	<div class="loader"></div>
-	<div class="blog-list">
+	<div class="blog-list hide">
 	</div>
-	<div class="blog-details"></div>
+	<div class="blog-details hide"></div>
 </div>
 
 <div class="footer">
