--- a/index.html
+++ b/index.html
@@ -23,10 +23,12 @@
 	<div class="container">
 		<a href="#" class="logo"></a>
 		<div class="nav">
-			<a href="https://twitter.com/intent/tweet?screen_name=babbittis" data-related="babbittis">Leave a Comment</a>
+
 		</div>
 	</div>
 </div>
+
+<div class="container new-post hide"></div>
 
 <div class="container blog-content">
 	<div class="loader"></div>
@@ -61,6 +63,8 @@
 <!-- Views -->
 <script src="public/javascripts/views/blog-view.js"></script>
 <script src="public/javascripts/views/blog-detail-view.js"></script>
+<script src="public/javascripts/views/new-post-view.js"></script>
+<script src="public/javascripts/views/nav-view.js"></script>
 <!-- Router -->
 <script src="public/javascripts/router.js"></script>
 
